@@ -1,3 +1,8 @@
+2005-07-25  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml: add video/3gpp with associated magic
+	(from: http://www.faqs.org/rfcs/rfc3839.html)
+
 2005-07-24  Thomas Leonard  <tal@ecs.soton.ac.uk>
 
 	* freedesktop.org.xml: sync
